--- a/src/components/style.css
+++ b/src/components/style.css
@@ -4,7 +4,7 @@
     justify-content: space-around;
 }
 
-button{
+.navButton{
     border: solid white;
     margin: 1%;
     font-size: 20px;
@@ -15,7 +15,7 @@ button{
     color: white;
     transition: all 0.5s;
 }
-button:hover{
+.navButton:hover{
     margin: 0.7% 1% 1.3% 1%;
     border: solid yellow;
     color: yellow;
