--- a/src/components/itemcount/ItemCount.css
+++ b/src/components/itemcount/ItemCount.css
@@ -1,19 +1,11 @@
 .contador{
-    background-color: black;
-    color: white;
-    width: 20%;
-    margin: 1% 40%;
-    font-size: 20px;
+    color: black;
+    width: 100%;
+    font-size: 18px;
+    font-weight: 600;
     display: flex;
         flex-direction: column;
         align-items: center;  
       
     }
         
-
-/* .cuenta{
-    color: white;
-} */
-
-.controlador{
-}
